# app-backend

./: Cargo.toml
user-service/: .gitignore  Cargo.toml  user.http
user-service/migrations/: 001_create_users_table.sql  002_seed_users_data.sql  003_seed_users_data.sql  004_add_nit_column.sql  20250913211735_init.sql
user-service/src/: main.rs
user-service/src/config/: mod.rs  server.rs
user-service/src/database/: config_db.rs  mod.rs
user-service/src/handler/: mod.rs  user_handler.rs
user-service/src/models/: mod.rs  model.rs
user-service/src/routes/: api.rs
user-service/src/service/: mod.rs  user_service.rs
