[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"]}
tokio = { version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20" }
url = "2.5.7"
